Make sure hands end up behind info box

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ body.yellow {
     right: -20px;
     top: 220px;
     float: right;
+    z-index: -1;
 }
 
 .peace-hand img {
